# projected_area

./: .gitignore  CMakeLists.txt  README.md
include/: mesh.hpp  scene.hpp  shader.hpp  vertex.hpp
python/: assimp_test.py  sphere.py
shaders/: fragment.glsl  vertex.glsl
src/: gl_error.cpp  mesh.cpp  projected_area.cpp
